--- a/web/src/global.less
+++ b/web/src/global.less
@@ -55,3 +55,12 @@ body {
 .ant-tooltip {
   z-index: 10000 !important;
 }
+
+/* Ant Design Drawer z-index fix - must be above everything else */
+.ant-drawer {
+  z-index: 10500 !important;
+}
+
+.ant-drawer-mask {
+  z-index: 10499 !important;
+}
